<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="org.torproject.vpn.ui.configure.model.ConfigureFragmentViewModel" />
        <variable
            name="handler"
            type="org.torproject.vpn.ui.configure.ClickHandler" />
        <import type="android.view.View" />
    </data>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginVertical="@dimen/activity_vertical_margin"
    tools:context="org.torproject.vpn.ui.configure.ConfigureFragment">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/title"
            style="@style/title_in_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/action_configure"
            tools:textColor="#000000"
            tools:text="Configure"
            />

        <org.torproject.vpn.ui.configure.view.ConfigItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawable="@drawable/ic_apps"
            app:text="@string/apps"
            app:secondaryText="@string/apps_description_all_protected"
            android:onClick="@{handler::onAppsClicked}"
            />

        <org.torproject.vpn.ui.configure.view.ConfigItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:drawable="@drawable/ic_code"
            app:text="@string/tor_logs"
            app:secondaryText="@string/tor_logs_description"
            android:onClick="@{handler::onTorLogsClicked}"
            />

        <org.torproject.vpn.ui.configure.view.ConfigItemView
            android:id="@+id/always_on_vpn"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/always_on_vpn"
            app:secondaryText="@string/always_on_vpn_description"
            android:onClick="@{handler::onAlwaysOnClicked}"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
</layout>
