<layout>
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_location"
            android:textAppearance="@style/info_dialog_expanded_title"
            android:gravity="center_horizontal"
            tools:textColor="#000000"
            android:paddingVertical="@dimen/compact_padding"
            />
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_location_description"
            android:paddingVertical="@dimen/compact_padding"
            android:textAppearance="@style/text_body_small"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/smProtectAllApps"
            style="@style/exit_node_super_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginBottom="15dp"
            android:padding="@dimen/switch_padding"
            android:text="@string/exit_location_automatic" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>