<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.torproject.vpn.ui.connectionsettings.model.ConnectionFragmentViewModel" />

        <variable
            name="handler"
            type="org.torproject.vpn.ui.connectionsettings.ClickHandler" />

        <import type="android.view.View" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="org.torproject.vpn.ui.approuting.AppRoutingFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:fitsSystemWindows="true"
            android:theme="@style/Theme.TorVPN.AppBarOverlay">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="@string/connection"
                app:toolbarId="@+id/toolbar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    app:navigationIcon="?attr/homeAsUpIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.TorVPN.PopupOverlay" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/default_padding"
                    android:layout_marginEnd="16dp"
                    android:animateLayoutChanges="true"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/round_bridge_info_bg">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_use_bridge"
                        style="@style/super_toggle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_a_bridge"
                        android:checked="@{viewModel.useBridge}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_current_bridge_title"
                        style="@style/connection_current_bridge_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/current_bridge"
                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/switch_use_bridge" />

                    <TextView
                        android:id="@+id/tv_current_bridge_value"
                        style="@style/connection_current_bridge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:text="@{viewModel.bridgeType}"
                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tv_current_bridge_title"
                        app:layout_constraintTop_toBottomOf="@+id/tv_current_bridge_title" />


                    <ImageView
                        android:id="@+id/ic_connection_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:paddingVertical="8dp"
                        android:paddingEnd="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="@{handler::onBridgeSettingsClicked}"
                        android:contentDescription="@string/bridge_settings"
                        android:src="@drawable/connection_settings"
                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv_current_bridge_title" />

                    <View
                        android:id="@+id/view_divider"
                        android:layout_width="2dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="12dp"
                        android:background="@color/indigo50"
                        android:visibility="@{viewModel.useBridge ? View.VISIBLE: View.GONE}"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_current_bridge_value"
                        app:layout_constraintEnd_toStartOf="@+id/ic_connection_settings"
                        app:layout_constraintTop_toTopOf="@+id/tv_current_bridge_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/textView5"
                    style="@style/connection_bridge_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/use_a_bridge_info" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/paragraph_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
                    android:paddingVertical="@dimen/default_padding"
                    android:text="@string/bridge_behaviour" />

                <org.torproject.vpn.ui.base.view.IconTextEntryView
                    android:id="@+id/quickstart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    app:hideDrawable="true"
                    app:hideSwitch="false"
                    app:secondaryText="@string/quickstart_description"
                    app:text="@string/quickstart" />

                <org.torproject.vpn.ui.base.view.IconTextEntryView
                    android:id="@+id/kill_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{handler::onAlwaysOnClicked}"
                    android:visibility="gone"
                    app:hideDrawable="true"
                    app:secondaryText="@string/kill_switch_description"
                    app:text="@string/kill_switch"
                    tools:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/paragraph_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
                    android:paddingVertical="@dimen/default_padding"
                    android:text="@string/debugging" />

                <org.torproject.vpn.ui.base.view.IconTextEntryView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{handler::onTorLogsClicked}"
                    app:drawable="@drawable/ic_code"
                    app:hideDrawable="true"
                    app:secondaryText="@string/tor_logs_description"
                    app:text="@string/tor_logs" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
